# tama_project

./: .gitignore  README.md  main.py  pyproject.toml  report.qmd  report.typ
data/: daily_level.parquet  daily_rain.parquet  ebc.txt
data/flood_cge/: 2018_a_04-2025_TTI_EDITADO.dbf  2018_a_04-2025_TTI_EDITADO.qix  2018_a_04-2025_TTI_EDITADO.qmd  2018_a_04-2025_TTI_EDITADO.shp  2018_a_04-2025_TTI_EDITADO.shx
data/pcd_level/: CoordenadasSerieHistorica_2015-2025.dbf  CoordenadasSerieHistorica_2015-2025.qix  CoordenadasSerieHistorica_2015-2025.shp  CoordenadasSerieHistorica_2015-2025.shx
src/tama_project/: filter_sample.py  level_data.py  main.py  network.py  ped_data.py  rain_data.py
